# GitHub-Stars-Release-Watcher

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Containerfile  README.md  README.zh.md  _debug_login.py  compose.yaml  dev.bat  dev.ps1  pyproject.toml  test.db-shm  test.db-wal
.github/workflows/: ci.yml
app/: config.py  crypto.py  database.py  github_client.py  main.py  models.py  security.py  utils.py
app/routers/: auth.py  dashboard.py  events.py  health.py  repos.py  settings.py  settings_route.py  tasks.py
app/services/: emailer.py  logs.py  notifier_manager.py  releases.py  scheduler.py  settings.py  stars.py
app/services/notifiers/: __init__.py  base.py  email.py
app/static/: app.css
app/templates/: base.html  dashboard.html  events.html  login.html  logs.html  repos.html  settings.html
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/components/: AppSidebar.vue
frontend/src/locales/: en.ts  index.ts  ja.ts  types.ts  zh.ts
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/views/: DashboardView.vue  EventsView.vue  LoginView.vue  ReposView.vue  SettingsView.vue
tests/: test_crypto.py  test_github_client.py  test_release_detection.py  test_settings_encryption.py  test_settings_validation.py
